# cc-compile

./: CMakeLists.txt  README.md  main.cpp
tools/android-ndk-r15c/: README.md
tools/armeabi/: toolchain.cmake
tools/linaro/: toolchain.cmake
tools/linux/: toolchain.cmake
tools/osx/: toolchain.cmake
